# DS_Homework_02

./: Hw2.1.ipynb  Hw2.2.ipynb  Hw2.3.ipynb  README.md  pyproject.toml  result.csv
