[tool.poetry]
name = "ds-homework-02"
version = "0.1.0"
description = ""
authors = ["MaksymBratsiun <bratsyun_m@ukr.net>"]
readme = "README.md"
packages = [{include = "ds_homework_02"}]

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^6.5.4"
pandas = "^2.0.2"
lxml = "^4.9.2"
html5lib = "^1.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
